--- a/.github/workflows/codecov.yaml
+++ b/.github/workflows/codecov.yaml
@@ -20,7 +20,9 @@ jobs:
       - uses: actions/setup-go@424fc82d43fa5a37540bae62709ddcc23d9520d4 # v2.1.5
         with:
           go-version: '1.17'
-          
+      -
+        name: Generate Code Coverage Report
+        run: make code-cov-report
       -
         name: Upload Coverage
         uses: codecov/codecov-action@v2.1.0
