--- a/.github/workflows/ossf-scorecards.yaml
+++ b/.github/workflows/ossf-scorecards.yaml
@@ -3,7 +3,7 @@ on:
   schedule:
     # Weekly on Saturdays.
     - cron: '30 1 * * 6'
-  push:
+  pull_request:
     branches: [ main, master ]
 
 # Declare default permissions as read only.
