--- a/.github/workflows/ossf-scorecards.yaml
+++ b/.github/workflows/ossf-scorecards.yaml
@@ -58,3 +58,4 @@ jobs:
         uses: github/codeql-action/upload-sarif@5f532563584d71fdef14ee64d17bafb34f751ce5 # tag=v1.0.26
         with:
           sarif_file: results.sarif
+          wait-for-processing: true
